--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Input calendar demo</title>
+    <title>Input creditcard demo</title>
 </head>
 <body>
     <section id="react"></section>
