--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,6 @@
 <body>
     <section id="react"></section>
     <script src="../bundle.js"></script>
-    <script src="sample.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
