--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <section id="react"></section>
-    <script src="../dis/react-creadicard.js"></script>
+    <script src="../dis/react-creditcard.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
