fixed input css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Credit card input as react component </title>
+  <link rel="stylesheet" type="text/css" href="build/build.css">
 </head>
 <body>
   <!-- content section -->
