--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-family: sans-serif;
     }
     h1 {
-      margin: 20px 150px;
+      margin: 20px 180px;
       color: #000;
     }
 
@@ -55,7 +55,7 @@
       margin: 160px auto 100px;
       padding: 50px 0 50px 0;
       box-shadow: 0 0 12px 2px hsla(0, 0%, 0%, 0.1);
-      min-width: 800px;
+      width: 800px;
       min-height: 200px;
     }
     .card-type {
@@ -67,13 +67,7 @@
   </style>
 </head>
 <body>
-  <!-- content section -->
-  <h1>React Credit Card Input Demo</h1>
-  <a href="https://github.com/eniz/react-creditcard-input"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/121cd7cbdc3e4855075ea8b558508b91ac463ac2/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png"></a>
-
-  <section id="content"></section>
-
-  <!-- Initialize SPA -->
-  <script type="text/javascript" src="build/build.js"></script>
+  <section id="app"></section>
+  <script src="build/build.js"></script>
 </body>
 </html>
